--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ test_job:
     - branches
   before_script:
     - echo "export CHROME_HEADLESS=false"
+    - echo '& "$env:NUNIT_PATH\tc-next.exe " "$env:UNITTEST_FOLDER\Guru99.dll --run"'
   script:
     - '& "$env:NUNIT_PATH\tc-next.exe " "$env:UNITTEST_FOLDER\Guru99.dll --run"'
   dependencies:
